--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ tags:
   - jekyll
   - theme
   - netlify
-email: youremail@xyz.com
-disqus_username: disqus_username
+email: jay@jaygreentree.com
+disqus_username: jaygreentree
 show_hero: true
 menu:
   - title: Home
@@ -42,7 +42,7 @@ two_columns_layout: true
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-google_analytics: "UA-XXXXXXXX-X"
+google_analytics: ""
 language: "en"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
