--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ github_username: jaygreentree
 facebook_username: drummerboy1983
 twitter_username: jayTheITGuy1983
 instagram_username: jaygreentree
-linkedin_username: 
-medium_username: 
+## linkedin_username: 
+## medium_username: 
 
 
 # Posts Settings
