--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-name: Jayflix
-title: Jayflix | A blog theme for Jekyll
+name: JayGreentree
+title: JayGreentree | A blog about my life.
 description: Jayflix is a template for Jekyll inspired by Netflix and made by Thiago Rossener.
 tags:
   - blog
