--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,40 @@
 # Site Settings
-name: JayGreentree
-title: JayGreentree | A blog about my life.
-description: Jayflix is a template for Jekyll inspired by Netflix and made by Thiago Rossener.
+name: Jekflix
+title: Jekflix | A blog theme for Jekyll
+description: Jekflix is a template for Jekyll inspired by Netflix and made by
+  Thiago Rossener.
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-email: jay@jaygreentree.com
-disqus_username: jaygreentree
 show_hero: true
 menu:
   - title: Home
     url: /
-  - title: Who We Are
+  - title: About
     url: /about
-  - title: beliefs
-    url: /about/beliefs
   - title: Contact
     url: /contact
   - title: Feed
     url: /feed.xml
+email: youremail@test.com
+# See: https://disqus.com/
+disqus_username: disqus_username
+# Contact Form Setting
+# See: https://formspree.io/
+formspree_form_id: formspree_form_id
 
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: jaygreentree
-facebook_username: drummerboy1983
-twitter_username: jayTheITGuy1983
-instagram_username: jaygreentree
-## linkedin_username: 
-## medium_username: 
+github_username: github_username
+facebook_username: facebook_username
+twitter_username: twitter_username
+instagram_username: instagram_username
+linkedin_username: linkedin_username
+medium_username: medium_username
 
 
 # Posts Settings
@@ -44,7 +47,7 @@ two_columns_layout: true
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-google_analytics: ""
+google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
 sent_message_url: "/contact/message-sent/"
@@ -102,4 +105,4 @@ exclude: [
 ]
 
 # Theme
-version: v3.1.0
+version: v3.1.1
